# clawagents_py

./: .gitignore  README.md  benchmark-report.md  benchmark_clawagents.py  benchmark_report.md  pyproject.toml  python-project-report.md  run_comparative_benchmarks.py
src/clawagents/: __init__.py  __main__.py  agent.py  tokenizer.py
src/clawagents/config/: config.py
src/clawagents/gateway/: server.py
src/clawagents/graph/: agent_loop.py
src/clawagents/logging/: diagnostic.py
src/clawagents/memory/: compaction.py  loader.py
src/clawagents/process/: command_queue.py  lanes.py
src/clawagents/providers/: llm.py
src/clawagents/sandbox/: __init__.py  backend.py  local.py  memory.py
src/clawagents/tools/: advanced_fs.py  exec.py  filesystem.py  interactive.py  registry.py  skills.py  subagent.py  think.py  todolist.py  web.py
src/clawagents/trajectory/: __init__.py  lessons.py  recorder.py
tests/: __init__.py  simulated_test.py  test_benchmark.py  test_corner_cases.py  test_fullstack.py  test_integration_parallel.py  test_integration_sophisticated.py  test_interface.py  test_parallel_tools.py  test_tokenizer.py  test_tools_comprehensive.py
